# BaseShiftWork

./: .gitignore  AGENT.md  AGENT_ONBOARDING_TASKS.md  CLAUDE.md  COMPANY_USER_ROLES_ARCHITECTURE.md  EMPLOYEE_REGISTRATION_FLOW.md  FEATURE_AUDIT_HISTORY.md  GITHUB_ISSUES_GUIDE.md  GITHUB_MCP_GUIDE.md  MCP_FUTURE_FEATURES.md  MCP_SECURITY_VALIDATION.md  MOBILE_FEATURES_SUMMARY.md  MOBILE_FIREBASE_AUTH_FIX.md  README.md  REGISTRATION_ARCHITECTURE_REVIEW.md  ROLE_PERMISSION_REFACTOR.md  SCHEDULE_GRID_FEATURES.md  SETUP_SUMMARY.md  WEBHOOK_INTEGRATION.md  docker-compose.yml  dockerfile  package-lock.json  package.json  test-audit.sql
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md  copilot-instructions.md.backup
.goose/: config.yaml
Docs/: AGENT.md  AGENT_ONBOARDING_TASKS.md  CONTRIBUTING.md  MOBILE_FEATURES_SUMMARY.md  MOBILE_FIREBASE_AUTH_FIX.md  QUICK_START.md  (+9 more)
python_client/: Dockerfile  MCP_SERVER.md  README.txt  ai_agent_test_interface.py  basic_mcp_server.py  basic_test.py  compatible_mcp_server - Copy.py  hadler_method.py  http_index.html  http_mcp_server.py  http_smtp_client.py  mcp_client.py  mcp_client2.0.py  mcp_server.py  mcp_test_client.py  mcp_test_server.py  minimal_mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  simple_debug_test.py  simple_mcp_server.py  simple_working_server.py
python_client/Docs/: MCP_TOOLS_BUILD_GUIDE.md
python_client/versions/: debug_mcp_server.py  http_test_client.py  mcp_server.py  minimal_mcp_server.py  simple_debug_test.py  test_simple_debug_versions.py  working_test_client.py
(+840 files in other folders)
